<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorbackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_of_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_launcher_background" />

        <Switch
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            android:buttonTint="@color/textcolor"
            android:id="@+id/switche"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="70dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/dark"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/switche"
            android:textColor="@color/textcolor"
            android:id="@+id/switchetext"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:layout_margin="5dp"
        android:textColor="@color/textcolor"
        android:id="@+id/text_view_phone_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:id="@+id/text_view_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
